# turtlebot_exploration_3d

./: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  LICENSE.txt  README.md  README.md~  package.xml
include/: covMaterniso3.h  exploration.h  gpregressor.h  move_base.h  navigation_utils.h
launch/: exploration_rviz.launch  minimal_explo.launch  turtlebot_explo.rviz  turtlebot_gmapping.launch
src/: covMaterniso3.cpp  gpregressor.cpp  mutual_info_offline.cpp  navigation_utils.cpp  scan_to_pcl.cpp  turtlebot_exploration_3d.cpp
