<?xml version="1.0"?>
<package>
  <name>server_mi_eva</name>
  <version>0.0.1</version>
  <description>Mutual Information Evaluation - Server</description>

  <maintainer email="baishi.bona@gmail.com">Bona</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/server_mi_eva</url>

  <author email="baishi.bona@gmail.com">Bona</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <run_depend>octomap_rviz_plugins</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>